<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Arduino Notifier</string>
    <string name="menu_settings">Settings</string>
    <string name="save">Save</string>
    <string name="hint_phone">1 (234) 567-8901</string>
    <string name="alert_texts_phone_number">Alert Texts Phone Number:</string>
    <string name="alert_email">Alert Email:</string>
    <string name="hint_email">youremail@email.com</string>
    <string name="settings">Settings</string>
    <string name="find_location">Find Me</string>
    <string name="sensor_name">Sensor Name:</string>
    <string name="arduino_connection_message">Connect hardware to start monitoring.</string>
    <string name="on_alert_">On Alert:</string>
    <string name="send_email">Send Email</string>
    <string name="take_photo">Take Photo</string>
    <string name="stop_alarm">STOP ALARM</string>

</resources>